[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-cli"
version = "1.0.0"
description = "A lightweight Python implementation of the 'tree' command."
authors = [
    { name = "Denis Shveykin", email = "denis@shveykin.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
tree = "tree_cli.tree:main"